changed % to px

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   background: url(images/background_wood.jpg) repeat;
-  border-top: 2% solid teal
+  border-top: 10px solid teal
 }
 
 img.preview {
