--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background: url(images/background_wood.jpg) repeat;
+  /* background: url(images/background_wood.jpg) repeat; */
   border-top: 10px solid teal
 }
 
