fixed the issue where I wasn't able to see the top border when bg image was shown

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
-  /* background: url(images/background_wood.jpg) repeat; */
-  border-top: 10px solid teal
+  border-top: 10px solid teal;
+  background: url(images/background_wood.jpg) repeat;
 }
 
 img.preview {
