--- a/style.css
+++ b/style.css
@@ -1,16 +1,36 @@
 body {
   border-top: 10px solid teal;
-  background: url(images/background_wood.jpg) repeat;
+  background-color: black;
+  
 }
+
+#rightSide {
+    /* width: 100%; */
+    /* max-width: 1920px; YOUR BG MAX SIZE */
+    background:url(images/bg.jpg) no-repeat center bottom;
+    background-size: cover;
+    opacity: 0.8;
+    
+  }
+  .fontOpacity{
+      background-color: rgba(0,0,0,0.65);
+      color: white;
+      width: 100%;
+      height: 100%;
+  }
 
 img.preview {
   width: 100px;
   height: 100px;
   display: block;
-  border-radius: 10px;
+  border-radius: 50%;
   margin: 0 auto;
   margin-top: 200px;
   cursor: pointer;
+}
+
+#profilePic{
+    /* border-radius: 50%; */
 }
 
 .overlay {
