--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,7 @@ body, html {
 
 .container {
   background-image: url(../assets/bg-left.png), url(../assets/bg-right.png);
+  background-attachment: fixed;
   background-repeat: no-repeat;
   background-position: bottom left, bottom right;
   background-size: 30vh, 28vh;
