--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;1,800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Bangers&display=swap");
 * {
-  font-family: 'Montserrat';
+  font-family: "Montserrat";
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   color: #fff;
 }
 
-body, html {
+body,
+html {
   font-size: 18px;
   margin: 0;
   padding: 0;
@@ -16,7 +17,7 @@ body, html {
 #disclaimer {
   margin: 0;
   padding: 0;
-  font-size: .5rem;
+  font-size: 0.5rem;
 }
 
 .container {
@@ -26,7 +27,7 @@ body, html {
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-position: bottom left, bottom right;
-  padding: .2em 1em;
+  padding: 0.2em 1em;
   height: 100vh;
 }
 
@@ -36,7 +37,7 @@ body, html {
 
 .container .about-me p {
   margin: 0;
-  padding: .5em 0;
+  padding: 0.5em 0;
 }
 
 .container .about-me .about-me--para {
@@ -44,13 +45,13 @@ body, html {
 }
 
 .container .about-me h1 {
-  font-family: 'Bangers', cursive;
+  font-family: "Bangers", cursive;
   font-size: 5rem;
   margin: 0;
 }
 
 .container #socialmedia a img {
-  margin: .2em .5em;
+  margin: 0.2em 0.5em;
   width: 3rem;
 }
 
