--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,3 @@
-@import url(./waves.css);
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;1,800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Bangers&display=swap");
 * {
@@ -77,7 +76,43 @@ html {
 }
 
 .container .about-me {
-  font-size: 1.5rem;
+  font-size: 1.4rem;
+  width: 100%;
+}
+
+.container .about-me__span--animate {
+  -webkit-animation: topToBottom .5s linear infinite 0s;
+          animation: topToBottom .5s linear infinite 0s;
+  color: #00abe9;
+  opacity: 0;
+  overflow: hidden;
+  position: absolute;
+  display: block;
+  text-align: center;
+}
+
+.container .about-me__span--animate:nth-child(2) {
+  animation-delay: 2.5s;
+  -ms-animation-delay: 2.5s;
+  -webkit-animation-delay: 2.5s;
+}
+
+.container .about-me__span--animate:nth-child(3) {
+  animation-delay: 5s;
+  -ms-animation-delay: 5s;
+  -webkit-animation-delay: 5s;
+}
+
+.container .about-me__span--animate:nth-child(4) {
+  animation-delay: 7.5s;
+  -ms-animation-delay: 7.5s;
+  -webkit-animation-delay: 7.5s;
+}
+
+.container .about-me__span--animate:nth-child(5) {
+  animation-delay: 10s;
+  -ms-animation-delay: 10s;
+  -webkit-animation-delay: 10s;
 }
 
 .container .about-me p {
@@ -116,6 +151,84 @@ html {
 .dark-mode {
   -webkit-filter: invert(100%);
           filter: invert(100%);
+}
+
+@-webkit-keyframes topToBottom {
+  0% {
+    opacity: 0;
+    display: block;
+  }
+  5% {
+    opacity: 0;
+    -webkit-transform: translateY(-25px);
+            transform: translateY(-25px);
+    display: block;
+  }
+  10% {
+    opacity: 1;
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+    display: block;
+  }
+  25% {
+    opacity: 1;
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+    display: block;
+  }
+  30% {
+    opacity: 0;
+    -webkit-transform: translateY(25px);
+            transform: translateY(25px);
+    display: block;
+  }
+  80% {
+    opacity: 0;
+    display: block;
+  }
+  100% {
+    opacity: 0;
+    display: block;
+  }
+}
+
+@keyframes topToBottom {
+  0% {
+    opacity: 0;
+    display: block;
+  }
+  5% {
+    opacity: 0;
+    -webkit-transform: translateY(-25px);
+            transform: translateY(-25px);
+    display: block;
+  }
+  10% {
+    opacity: 1;
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+    display: block;
+  }
+  25% {
+    opacity: 1;
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+    display: block;
+  }
+  30% {
+    opacity: 0;
+    -webkit-transform: translateY(25px);
+            transform: translateY(25px);
+    display: block;
+  }
+  80% {
+    opacity: 0;
+    display: block;
+  }
+  100% {
+    opacity: 0;
+    display: block;
+  }
 }
 
 /* Block component */
