--- a/newsletters/style.css
+++ b/newsletters/style.css
@@ -22,15 +22,21 @@ body {
 }
 
 #btn-back {
+  display: block;
+  max-width: -webkit-fit-content;
+  max-width: -moz-fit-content;
+  max-width: fit-content;
   text-decoration: none;
   padding: .5rem 1rem;
   background-color: #111;
   color: white;
-  border-radius: 10%;
+  border-radius: 5px;
 }
 
 nav {
   text-align: center;
+  margin: .5em;
+  margin-bottom: 0;
 }
 
 nav > a {
