--- a/newsletters/newsletter-style.css
+++ b/newsletters/newsletter-style.css
@@ -27,10 +27,10 @@ body {
   max-width: -moz-fit-content;
   max-width: fit-content;
   text-decoration: none;
-  padding: .5rem 1rem;
-  background-color: #111;
-  color: white;
-  border-radius: 5px;
+  padding: .25rem 1rem;
+  color: black;
+  border: solid black 5px;
+  border-radius: 5rem;
 }
 
 nav {
@@ -95,11 +95,11 @@ blockquote {
   font-size: 2.5rem;
   font-weight: 700;
   margin-top: 0;
-  margin-bottom: 0.75em;
 }
 
 .sub-section {
   padding: 0.5rem 1rem;
+  padding-left: 0;
 }
 
 .sub-section .long-text {
