--- a/newsletters/newsletter-style.scss
+++ b/newsletters/newsletter-style.scss
@@ -22,10 +22,11 @@ body {
   display: block;
   max-width: fit-content;
   text-decoration: none;
-  padding: .5rem 1rem;
-  background-color: #111;
-  color: white;
-  border-radius: 5px;
+  padding: .25rem 1rem;
+  // background-color: #111;
+  color: black;
+  border: solid black 5px;
+  border-radius: 5rem;
 }
 nav{
     text-align: center;
@@ -83,11 +84,11 @@ blockquote {
   font-size: 2.5rem;
   font-weight: 700;
   margin-top: 0;
-  margin-bottom: 0.75em;
 }
 
 .sub-section {
   padding: 0.5rem 1rem;
+  padding-left: 0;
   .long-text{
     font-size: 1.1rem;
   line-height: 1.7rem;
