--- a/random/he-needs-time/single-article-style.scss
+++ b/random/he-needs-time/single-article-style.scss
@@ -37,14 +37,32 @@ html {
           border-right: 2px solid;
           border-radius: 2px;
       }
+      a{
+        color: #b00b;
+      }
+    }
+    sup{
+      font-size: .65em;
     }
     
   }
   .long-para{
-    line-height: 2em;
+    line-height: 1.7em;
     &--less-imp{
+      color: #babe;
       color: hsl(0deg, 0%, 56%);
       font-size: 0.9rem;
     }
+    
+  }
+  .page-title{
+    background-color: whitesmoke;
+    padding: .5em;
+    margin: auto;
+    margin-left: -10px;
+    padding-left: 5px;
+    border-left: 5px solid #babe;
+    border-right: 5px solid #babe;
+    color: #b00b;
   }
   
