--- a/template/template-chat.scss
+++ b/template/template-chat.scss
@@ -1,11 +1,13 @@
 $chat-bg-color: hsl(0, 0%, 15%);
 $aj-chat-bg-color: hsl(0, 0%, 30%);
 // $aj-chat-bg-color-whatsapp: hsl(173, 100%, 34%);
-$friend-chat-bg-color: hsl(300, 100%, 80%);
+$friend-chat-bg-color: hsl(0, 0%, 80%);
 // $friend-chat-bg-color: hsl(0, 100%, 20%);
 $chat-text-color: hsl(0, 0%, 90%);
 
-
+*{
+    box-sizing: border-box;
+}
 html, body{
     margin: 0;
     padding: 0;
@@ -14,28 +16,31 @@ html, body{
 }
 .container{
     padding: .5em;
-    &--chat{
-        max-width: 890px;
-        margin: auto;
-        padding: 4em 2em;
-        font-weight: 500;
-        background-color: $chat-bg-color;
-        color: $chat-text-color;
-        display: flex;
-        flex-direction: column;
-        gap: 1.2em;
-    }
+    
 }
+.container--chat{
+    max-width: 890px;
+    margin: auto;
+    padding: 4em 2em;
+    font-weight: 500;
+    background-color: $chat-bg-color;
+    color: $chat-text-color;
+    display: flex;
+    flex-direction: column;
+    gap: 1.2em;
+}
+
 .said-by{
     
     border-radius: .8em;
     max-width: 400px;
+    max-width: Min(70%,400px);
     &--ajeet{
         background-color: $aj-chat-bg-color;
         // text-align: right;
         align-self: flex-end;
-        border-radius: .8em .8em 0px .8em;
-        padding: .75em 2em 1em .5em;
+        border-radius: 1em 1em 0px 1em;
+        padding: .75em Min(2em,2vw) 1em .75em;
         // padding-right: 2em;
     }
     &--friend{
@@ -43,12 +48,14 @@ html, body{
         color: hsla(0, 0, 10%,1);
         border-radius: .8em .8em .8em 0px;
         // padding-left: 2em;
-        padding: .75em .5em 1em 2em;
+        padding: .75em .5em 1em Min(2em,2vw);
     }
     .reply{
-        margin: 1em 0;
+        margin: .25em 0 1em 0;
         border-radius: .5em;
         // background-color: black;
+        min-width: 100%;
+        border: 2px solid black;
         border-left: 5px solid black;
         &--ajeet{
             color: white;
