--- a/random/style.css
+++ b/random/style.css
@@ -86,6 +86,29 @@ blockquote {
   margin: .2rem;
 }
 
+.external-links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: .5em;
+}
+
+.external-links__list--item {
+  list-style: lower-roman;
+}
+
+.external-links__links {
+  text-decoration: none;
+}
+
+.external-links__links:hover {
+  text-decoration: underline;
+}
+
 .container {
   margin: 0.5rem 0;
   padding: .2rem .5rem;
@@ -95,6 +118,10 @@ blockquote {
   font-size: 2.5rem;
   font-weight: 700;
   margin-top: 0;
+}
+
+.page-title--secondary {
+  font-size: 1.5rem;
 }
 
 .sub-section {
