Added a referral link page

--- a/css/header.scss
+++ b/css/header.scss
@@ -4,6 +4,7 @@
     justify-content: space-evenly;
     gap: 1em;
     padding: .25em;
+    font-size: .8rem;
     &__items{
         background: rgb(228, 228, 228);
         padding: 0.25em 0.75em;
