--- a/css/referral.css
+++ b/css/referral.css
@@ -46,6 +46,10 @@
   gap: .5em;
 }
 
+.external-links__list {
+  padding-left: 1.2em;
+}
+
 .external-links__list--item {
   list-style: lower-roman;
 }
