--- a/css/referral.scss
+++ b/css/referral.scss
@@ -35,6 +35,7 @@
     padding: 0;
     gap: .5em;
     &__list{
+      padding-left: 1.2em;
       &--item{
         list-style: lower-roman;
       }
