--- a/css/quicklinks.css
+++ b/css/quicklinks.css
@@ -35,11 +35,16 @@
   gap: 1.25em;
 }
 
-.list__item a {
+.list__link {
   text-decoration: none;
 }
 
-.list__item a:hover {
+.list__link:hover {
   text-decoration: underline;
+}
+
+.list__info {
+  font-size: .8rem;
+  margin-top: .5em;
 }
 /*# sourceMappingURL=quicklinks.css.map */
