--- a/css/referral.css
+++ b/css/referral.css
@@ -15,6 +15,19 @@
   max-width: 700px;
 }
 
+.toc__heading {
+  margin: .5em;
+}
+
+.toc__list {
+  margin: 0;
+  margin-bottom: .5em;
+}
+
+.toc__list-item {
+  margin-top: .5em;
+}
+
 .page-title {
   font-size: 1.75rem;
 }
